--- a/lemurs13.html
+++ b/lemurs13.html
@@ -3,7 +3,7 @@
   <head>
     <title>Melbourne Zoo Male Ring-tailed Lemurs</title>
 
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/base/jquery-ui.css">
     
     <script>
       var lemurs = [
